fix [#33726] keyframe_insert() and keyframe_delete() with index=-1 always fail

The bug was introduced in r53297, was calling pyrna_struct_anim_args_parse() twice for no reason, perhaps baddly applied patch?.